css/style.css
/****** General ***********/
body {
    display: flex;
    justify-content: center;
    margin: 0;
}

header {
    display: flex;
    justify-content: space-between;
    align-items: center;
   
}

nav {
    display: flex;
    margin: 0;
    padding: 0;
}

nav a {
    padding: 16px 20px;
    border-top: 2px solid transparent;
    margin: 0;
}

nav a:hover {
    color: #0065FC;
    border-top: 2px solid #0065FC;
}

h1 {
    font-size: 40px;
    font-weight: 700;
    line-height: 1.2;
}

.logo{
    width: 62px;
    height: auto;
}


section {
margin-top: 50px;
}
.recherche-form {
    display:flex;
    margin-top: 20px;
}


.recherche-form input {
    border:  1px solid #F2F2F2;
    font-weight: bold;
    padding: 15px;
}
.recherche-form button {
    background-color:  #0065FC;
    color:white;
    border:none;
    padding: 15px 20px;
    border-radius: 0 15px 15px 0;
    font-weight: 500;
}

.filters{
    display:flex;
    align-items:center;
    gap: 10px;
    margin-top:25px;
}

.filters-buttons{
    justify-content: center;
    align-items: center;
    display:flex;
    flex-wrap: wrap;
    gap: 10px;
}

.filter-button{
    border:2px solid #D9D9D9;
    border-radius:25px;
    background:white;
    padding:12px ;
    font-weight:700;
    justify-content: center;
    gap:10px ;
    display: flex;
align-items: center;
}

.hebergements .card {
    display: flex;
    flex-direction: column;
    margin-bottom: 20px;
}

.hebergements .card img {
    width: 100%;
    height: 130px;
    object-fit: cover;
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
}

.hebergements a {
    display: block;
    width: 30%;
}

.hebergements .card-content {
    padding: 10px;
}



.hebergements-cards {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

.afficher-plus {
    font-weight: 700;
    font-size: 18px;
    margin-top: 0px;
    
    display:inline-block;
    width:auto;
    white-space:nowrap;
}

.filter-button:hover{
    background:#DEEBFF;
}

.info{
    display:flex;
    align-items:center;
    gap:10px;
    margin-top: 20px;
}

.info i{
    width: 26px;
    height: 26px;
    border:1px solid #D9D9D9;
    border-radius:50%;
    display:flex;
    justify-content:center;
    align-items:center;
    gap: 10px;
}
.activites {
    margin-top: 50px;
}
.activites-cards {
    display: flex;
    justify-content: space-between;
    gap: 30px;
}
.activites-cards a {
    width: 25%;
    display: block;
}
.activites .card {
    display: flex;
    flex-direction: column;
    padding: 0;
}
.activites .card img {
    width: 100%;
    height: 380px;
    object-fit: cover;
    border-radius: 20px 20px 0 0;
}
.activites .card-title {
    padding: 20px;
    margin: 0;
}

*  {
    font-family: 'Raleway', sans-serif;
}

:root {
    --main-color: #0065FC;
    --main-bg-color: #F2F2F2;
    --filter-bg-color: #DEEBFF;
}

.fa-solid {
    color: var(--main-color);
  
}

.location-icon .fa-solid{
    background-color:rgb(236, 230, 230);
     padding: 16px;
      border-radius: 15px 0 0 15px;
      color: black;
      }

.main-container {
    width: 100%;
    max-width: 1440px;
    padding: 0 50px;
    box-sizing: border-box;
}

a {
    color: inherit;
    text-decoration: none;
}

.section-title {
    margin: 0;
    font-size: 22px;
    margin-bottom: 30px;
}

.card {
    background-color: white;
    border-radius: 20px;
    padding: 5px;
    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
}

.card img {
    object-fit: cover;
}

.card-title {
    font-size: 16px;
}

.euro {
    font-weight: 600;
}

.neutral-star {
    color: var(--main-bg-color)
}

/****** Hebergements And Populaires ***********/

.hebergements-and-populaires {
    display: flex;
    justify-content: space-between;
}

.hebergements-and-populaires section {
    background-color: var(--main-bg-color);
    border-radius: 20px;
    padding: 30px;
    box-sizing: border-box;
}

/****** Hebergements ***********/
.hebergements {
    width: 65%;
}

/****** Populaires ***********/
.populaires {
    width: 32%;
}

.populaires-title {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.populaires-cards .card {
    display: flex;
    margin-top: 33px;
}

.populaires-cards img {
    width: 33%;
    height: 136px;
    border-top-left-radius: 20px;
    border-bottom-left-radius: 20px;
}

.populaires-cards .card-content {
    width: 67%;
    padding-left: 15px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    box-sizing: border-box;
}

.populaires-cards .card-title {
    margin-top: 10px;
    margin-bottom: 4px;
}

.populaires-cards .card-subtitle {
    margin: 0;
}

.populaires-cards .card-rating {
    margin-bottom: 5px;
}

/****** Footer ***********/

footer {
    display: flex;
    justify-content:space-between;
    background-color: var(--main-bg-color);
    margin-top: 50px;
    padding: 20px;
}

.footer-column a {
display: block;
margin-bottom: 15px;
margin-left: 20px;
}

.footer-column h3 {
    margin-bottom: 20px;
    margin-left: 20px;
}

.footer-column {
     display: flex;
    flex-direction: column;
    width: 30%;
}



/* Le code ci-dessous correspond à la version responsive uniquement */

/****** Media queries ***********/
/* Medium devices (tablets, less/equal than 1024px) */
@media (max-width: 1024px) {
    .hebergements-and-populaires {
        flex-direction: column;
    }

    .hebergements {
        width: 100%;
    }

    .populaires {
        width: 100%;
        margin-top: 50px;
    }

    .populaires-cards {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
    }

    .populaires-cards a {
        width: 30%;
    }

    .populaires-cards .card-title {
        font-size: 14px;
    }

    .populaires-cards .card-subtitle {
        font-size: 13px;
    }
}

/* Small devices (phones, less than 768px) */
@media (max-width: 767.98px) {


     .main-container {
        padding:0 20px;
      
    }
    .logo {
        margin-top: 15px;
    }

    h1 {
        font-size: 22px;
        
    }


    header {
        flex-direction: column;
        align-items: center;
    }


    .nav {
        width: 100%;
        display: flex;
        gap: 0;
        padding: 0;
        margin-top: 20px;
    }


    .nav a {
        width: 50%;
        text-align: center;
        padding-bottom: 15px;
        border-bottom: 2px solid #F2F2F2;
    }

    .nav a:hover {
        border-top: none;
        border-bottom: 2px solid #0065FC;
    }

 .filters {
        flex-direction: column;
        align-items: flex-start;
        margin-top: 10px;
        margin-bottom: 0;
        gap: 10px;
    }

   .filter-button {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 10px;
       width: calc(50% - 5px);
    box-sizing: border-box;

}

.filter-button i {
    margin: 0;
}


.hebergements-and-populaires .hebergements {
    background-color: white;
    border-radius: 0;
    padding: 15px;
    margin-top: 20px;
    margin-bottom: 0;
    padding-bottom: 0;
}

 .hebergements-and-populaires section {
    border-radius: 0;
    padding: 30px 20px;
}
  
.hebergements .section-title {
    text-align: left;
    margin-bottom: 10px;
}

.section-title {
    font-size:20px;
}


.hebergements-and-populaires {
        display: flex;
        flex-direction: column-reverse;
        gap: 0;
        background-color: #F2F2F2;
        background: transparent;
    }

.populaires {
    width: 100vw;
    margin-left: calc(50% - 50vw);
    margin-right: calc(50% - 50vw);
    background: #F2F2F2;
    border-radius: 0;
    padding: 30px 20px;
}
.populaires::after {
    content: "";
    display: block;
    height: 20px;
    background: #F2F2F2;
}

 .hebergements-cards,
    .activites-cards {
        display: flex;
        flex-direction: column;
    }



.populaires-title h2 {
    margin: 0;
    margin-bottom: 10px;
}
    .populaires-cards {
    display: flex;
    flex-direction: column;
    gap: 15px;
}

.populaires-cards a {
    width: 100%;
}

.populaires-cards .card {
    margin-top: 0;
}
.populaires-cards .card-subtitle {
    margin-top: 2px;
}
   
    .populaires-cards .card-content {
    width: 67%;
    padding-left: 10px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    box-sizing: border-box;
}

.populaires-cards .card-title {
    font-size: 16px;
}

.populaires-cards img {
    width: 33%;
    height: 136px;
    object-fit: cover;
    border-top-left-radius: 20px;
    border-bottom-left-radius: 20px;
}
.populaires-title i {
    position: relative;
    
}
.info {
    display: flex;
    gap: 10px;
}
.info p {
    margin: 0;
    line-height: 1.3;
    font-size: 15px;
}
.info i {
    width: 22px;
    height: 22px;
    font-size: 13px;
     border: 1px solid #D9D9D9;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
    color: #0065FC;
    flex-shrink: 0;
}
.recherche-form {
    display: flex;
      width: 100%;
      align-items: center;
}


.recherche-button .texte {
    display: none;
}

.recherche-input {
    flex: 1;
    height: 50px;
    border: 1px solid #F2F2F2;
    font-weight: bold;
    font-size: 16px;
    box-sizing: border-box;
    appearance: none;
     text-align: center;
  padding-left: 0;
    padding-right: 20px;
    text-indent: -8px;
}

.recherche-button {
    height: 50px;
}

.recherche-button i {
    display: block;
    color: white;
    font-size: 18px;
}

.recherche-form button {
    border-radius: 15px;
     margin-left: -10px;
}



    .hebergements-cards a,
    .activites-cards a {
        width: 100%;
    }

    .activites .card img {
        height: 200px;
    }

   footer {
    flex-direction: column;
    margin-left: -20px;
    margin-right: -20px;
    padding: 20px;
}

    .footer-column {
        width: 100%;
        margin-bottom: 30px;
    }
}

